--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "lint": "tslint src/**/*.ts",
     "release": "np --no-publish",
     "precommit": "lint-staged",
-    "postcheckout": "yarn",
-    "prepare": "npm run build"
+    "postcheckout": "yarn"
   },
   "lint-staged": {
     "*.ts": [
